fix: responsivness element overlapping

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -34,7 +34,7 @@ header {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 4em;
 
-    height: 100vh;
+    height: 100%;
     padding: 4em;
     margin-bottom: 2em;
 }
@@ -58,6 +58,7 @@ footer {
     align-items: center;
     padding: 8em;
     background-color: var(--space-cadet);
+    width: 100%;
 }
 
 #footer-text {
